# newtonbot

./: .gitignore
docs/: ARCHITECTURE.md  COMMUNICATION.md  INTERFACE_SPECIFICATION.md  OBJECTIVES.md  STATE_MACHINE.md
newtonbot_bringup/: package.xml  setup.cfg  setup.py
newtonbot_controller/: package.xml  setup.cfg  setup.py
newtonbot_description/: CMakeLists.txt  package.xml
newtonbot_interfaces/: CMakeLists.txt  package.xml
newtonbot_interfaces/msg/: MissionCommand.msg  MissionProgress.msg  MissionStatus.msg  MotionStatus.msg  RobotStatus.msg  SafetyStatus.msg
newtonbot_interfaces/srv/: GetRobotStatus.srv  StartMission.srv
newtonbot_mission/: package.xml  setup.cfg  setup.py
newtonbot_mission/newtonbot_mission/: mission_manager.py
newtonbot_motion/: package.xml  setup.cfg  setup.py
newtonbot_motion/config/: motion_params.yaml
newtonbot_motion/newtonbot_motion/: motion_controller.py
